<resources>
    <string name="app_name">Fiesta</string>
    <string name="text_music">Music</string>
    <string name="text_community">Community</string>
    <string name="text_home">Home</string>
    <string name="text_search">Search</string>
    <string name="text_profile">Profile</string>

    <string name="label_community_list">Community List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_empty_string">-</string>

    <string name="label_write_post">new post</string>
    <string name="label_search">search</string>
    <string name="reply_hint"><font size="10">댓글을 입력하세요..</font></string>
    <string name="no_reply">등록된 댓글이 없습니다.</string>

    <string name="category_free">자유게시판</string>
    <string name="category_info">정보·꿀팁</string>
    <string name="category_music">이 노래 뭐에요?</string>
    <string name="category_review">페스티벌 후기</string>
    <string name="category_ticket">티켓 매매·양도</string>
    <string name="category_question">질문·답변</string>
    <string name="category_group">같이 갈 사람?</string>
    <string name="dialog_title">카테고리를 선택해주세요</string>
</resources>
